force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/plaunch__ScriptAndPitch_Script__c.object-meta.xml
<CustomObject>
    <label>ScriptAndPitch Script</label>
    <nameField>
        <label>ScriptAndPitch Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScriptAndPitch Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>