force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__First__c.field-meta.xml
<CustomField>
    <fullName>plaunch__First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First</label>
    <type>Checkbox</type>
</CustomField>