force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__Save_Note__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Save_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Note</label>
    <type>Checkbox</type>
</CustomField>