force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__Script_Type__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Script_Type__c</fullName>
    <defaultValue>&quot;Text&quot;</defaultValue>
    <label>Script Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Tickbox</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>