force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__ScriptAndPitch_Scenario__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ScriptAndPitch_Scenario__c</fullName>
    <label>ScriptAndPitch Scenario</label>
    <referenceTo>plaunch__ScriptAndPitch_Scenario__c</referenceTo>
    <relationshipLabel>Scripts</relationshipLabel>
    <relationshipName>ScriptAndPitchScripts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>