force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>