force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__Set_up_meeting__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Set_up_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set up meeting</label>
    <type>Checkbox</type>
</CustomField>