force-app/main/default/objects/plaunch__ScriptAndPitch_Script__c/fields/plaunch__Values__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Values__c</fullName>
    <label>Values</label>
    <type>TextArea</type>
</CustomField>